--- a/index.html
+++ b/index.html
@@ -4,10 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Portfolio</title>
 </head>
 <body>
-    <h1> Welcome </h1>
-    <p> This will get pretty</p>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Charlie Hilton</h1>
+          <p class="lead"> Full Stack Web Development student at the University of Austin-Texas.</p>
+        </div>
+      </div>
+
+      <div class="card-deck">
+        <div class="card">
+          <a href="https://charlieh1988.github.io/unit-4-game/" target="_blank"> 
+          <img class="card-img-top" src="assets/images/CrystalCollector.PNG" alt="Cyrstal Collector">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title">Cyrstal Collector</h5>
+            <p class="card-text"> Click the crystals in order to match your score with the value shown.</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://github.com/charlieh1988/unit-4-game" target="_blank"><img src="assets/images/GitHub.png" alt="GitHub logo"></a> Get a closer look at the code. 
+          </div>
+        </div>
+        <div class="card">
+          <a href="https://charlieh1988.github.io/Train-Schedule/" target="_blank">
+          <img class="card-img-top" src="assets/images/train.jpg" alt="Train Scheduler">
+          </a>
+          <div class="card-body">
+           <p><h5 class="card-title">Train Schedule</h5>
+           
+              </a>
+            <p class="card-text">Hop aboard the train to Bootstrap, Javascript, Jquery and Moment.ja success. </p>
+          </div>
+          <div class="card-footer">
+           <a href="https://github.com/charlieh1988/Train-Schedule" target="_blank"><img src="assets/images/GitHub.png" alt="GitHub logo"></a> Get a closer look at the code. 
+           
+          </div>
+        </div>
+        <div class="card">
+          <a href="http://breweryheaven.com/" target="_blank">
+          <img class="card-img-top" src="assets/images/beer.jpg" alt="Brewery Heaven">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title">Brewery Heaven</h5>
+            <p class="card-text">If you're looking for a place to find the best breweries in your area then look no further!</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://github.com/clderoch/GroupSix-Project1" target="_blank"><img src="assets/images/GitHub.png" alt="GitHub logo"></a> Get a closer look at the code. 
+          </div>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Contact Me</h1>
+          <p class="lead"> Email: charlie.hiltons@gmail.com</p>
+          <p class="lead">LinkedIn: https://www.linkedin.com/in/charles-hilton-1b1a7a34/</p>
+        </div>
+      </div>
+
 </body>
 </html>
