--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Contact Me</h1>
-          <p class="lead"> Email: charlie.hiltons@gmail.com</p>
-          <p class="lead">LinkedIn: https://www.linkedin.com/in/charles-hilton-1b1a7a34/</p>
+          <p class="lead"> <a href="mailto:charlie.hiltons@gmail.com"> Email Me </a> <a href="https://www.linkedin.com/in/charles-hilton-1b1a7a34"> LinkedIn </a></p>
+       
         </div>
       </div>
 
