--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid text-white bg-primary">
         <div class="container">
           <h1 class="display-4">Charlie Hilton</h1>
           <p class="lead"> Full Stack Web Development student at the University of Austin-Texas.</p>
@@ -36,9 +36,7 @@
           <img class="card-img-top" src="assets/images/train.jpg" alt="Train Scheduler">
           </a>
           <div class="card-body">
-           <p><h5 class="card-title">Train Schedule</h5>
-           
-              </a>
+           <h5 class="card-title">Train Schedule</h5>
             <p class="card-text">Hop aboard the train to Bootstrap, Javascript, Jquery and Moment.ja success. </p>
           </div>
           <div class="card-footer">
@@ -69,6 +67,10 @@
     <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
+        <a class="btn-floating btn-dribbble mx-1">
+        <a href="https://github.com/charlieh1988"><i class="fab fa-github-square fa-3x"></i></a>
+      </li>
+      <li class="list-inline-item">
         <a class="btn-floating btn-fb mx-1">
         <a href="mailto:charlie.hiltons@gmail.com"><i class="far fa-envelope fa-3x"></i>
         </a>
@@ -79,10 +81,7 @@
         <a href="https://www.linkedin.com/in/charles-hilton-1b1a7a34"><i class="fab fa-linkedin fa-3x"></i>
         </a>
       </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-dribbble mx-1">
-        <a href="https://github.com/charlieh1988"><i class="fab fa-github-square fa-3x"></i></a>
-      </li>
+     
     </ul>
     <!-- Social buttons -->
 
