adding more files

--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
             <a href="https://github.com/clderoch/GroupSix-Project1" target="_blank"><img src="assets/images/GitHub.png" alt="GitHub logo"></a> Get a closer look at the code. 
           </div>
         </div>
+        <div class="card">
+          <a href= "https://radiant-thicket-48296.herokuapp.com/" target="_blank">
+          <img class="card-img-top" src="assets/images/machineGun.png" alt="Chuck Norris Joke List">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title">Chuck Norris Joke List</h5>
+            <p class="card-text">Enter your favorite Chuck Norris joke and get one for free!</p>
+          </div>
+          <div class="card-footer">
+            <a href="https://github.com/Redtgrlily/project2" target="_blank"><img src="assets/images/GitHub.png" alt="GitHub logo"></a> Get a closer look at the code. 
+          </div>
+        </div>
       </div>
       </div>
 <!-- Footer -->
